adiciona documentacao para book e loans
